// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`key > renders correctly 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <kbd
      class="styles__lo0770 styles_prominence_default__lo0772 styles_sentiment_neutral__lo0774 styles_size_medium__lo0776"
      data-prominence="default"
      data-sentiment="neutral"
      data-size="medium"
    >
      <span
        class="style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_caption__1yhcak8p style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
      >
        A
      </span>
    </kbd>
  </div>
</DocumentFragment>
`;

exports[`key > renders disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <kbd
      class="styles__lo0770 styles_disabled_true__lo0771 styles_prominence_default__lo0772 styles_sentiment_neutral__lo0774 styles_size_medium__lo0776 styles_undefined_compound_1__lo0779"
      data-disabled="true"
      data-prominence="default"
      data-sentiment="neutral"
      data-size="medium"
    >
      <span
        class="style__1yhcak80 style_disabled_true__1yhcak81 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_caption__1yhcak8p style_undefined_compound_28__1yhcak822"
      >
        A
      </span>
    </kbd>
  </div>
</DocumentFragment>
`;

exports[`key > renders disabled primary 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <kbd
      class="styles__lo0770 styles_disabled_true__lo0771 styles_prominence_default__lo0772 styles_sentiment_primary__lo0775 styles_size_medium__lo0776 styles_undefined_compound_3__lo077b"
      data-disabled="true"
      data-prominence="default"
      data-sentiment="primary"
      data-size="medium"
    >
      <span
        class="style__1yhcak80 style_disabled_true__1yhcak81 style_prominence_default__1yhcak84 style_sentiment_primary__1yhcak8c style_variant_caption__1yhcak8p style_undefined_compound_4__1yhcak81e"
      >
        A
      </span>
    </kbd>
  </div>
</DocumentFragment>
`;

exports[`key > renders disabled strong 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <kbd
      class="styles__lo0770 styles_disabled_true__lo0771 styles_prominence_strong__lo0773 styles_sentiment_neutral__lo0774 styles_size_medium__lo0776 styles_undefined_compound_0__lo0778 styles_undefined_compound_1__lo0779 styles_undefined_compound_5__lo077d"
      data-disabled="true"
      data-prominence="strong"
      data-sentiment="neutral"
      data-size="medium"
    >
      <span
        class="style__1yhcak80 style_disabled_true__1yhcak81 style_prominence_stronger__1yhcak86 style_sentiment_neutral__1yhcak8b style_variant_caption__1yhcak8p style_undefined_compound_30__1yhcak824"
      >
        A
      </span>
    </kbd>
  </div>
</DocumentFragment>
`;

exports[`key > renders disabled strong primary 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <kbd
      class="styles__lo0770 styles_disabled_true__lo0771 styles_prominence_strong__lo0773 styles_sentiment_primary__lo0775 styles_size_medium__lo0776 styles_undefined_compound_2__lo077a styles_undefined_compound_3__lo077b styles_undefined_compound_4__lo077c"
      data-disabled="true"
      data-prominence="strong"
      data-sentiment="primary"
      data-size="medium"
    >
      <span
        class="style__1yhcak80 style_disabled_true__1yhcak81 style_prominence_strong__1yhcak85 style_sentiment_primary__1yhcak8c style_variant_caption__1yhcak8p style_undefined_compound_5__1yhcak81f"
      >
        A
      </span>
    </kbd>
  </div>
</DocumentFragment>
`;

exports[`key > renders primary 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <kbd
      class="styles__lo0770 styles_prominence_default__lo0772 styles_sentiment_primary__lo0775 styles_size_medium__lo0776"
      data-prominence="default"
      data-sentiment="primary"
      data-size="medium"
    >
      <span
        class="style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_primary__1yhcak8c style_variant_caption__1yhcak8p style_undefined_compound_0__1yhcak81a style_undefined_compound_40__1yhcak82e"
      >
        A
      </span>
    </kbd>
  </div>
</DocumentFragment>
`;

exports[`key > renders small 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <kbd
      class="styles__lo0770 styles_prominence_default__lo0772 styles_sentiment_neutral__lo0774 styles_size_small__lo0777"
      data-prominence="default"
      data-sentiment="neutral"
      data-size="small"
    >
      <span
        class="style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_captionSmall__1yhcak8q style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
      >
        A
      </span>
    </kbd>
  </div>
</DocumentFragment>
`;

exports[`key > renders strong 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <kbd
      class="styles__lo0770 styles_prominence_strong__lo0773 styles_sentiment_neutral__lo0774 styles_size_medium__lo0776 styles_undefined_compound_0__lo0778"
      data-prominence="strong"
      data-sentiment="neutral"
      data-size="medium"
    >
      <span
        class="style__1yhcak80 style_prominence_stronger__1yhcak86 style_sentiment_neutral__1yhcak8b style_variant_caption__1yhcak8p style_undefined_compound_2__1yhcak81c style_undefined_compound_66__1yhcak834"
      >
        A
      </span>
    </kbd>
  </div>
</DocumentFragment>
`;

exports[`key > renders strong primary 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <kbd
      class="styles__lo0770 styles_prominence_strong__lo0773 styles_sentiment_primary__lo0775 styles_size_medium__lo0776 styles_undefined_compound_2__lo077a"
      data-prominence="strong"
      data-sentiment="primary"
      data-size="medium"
    >
      <span
        class="style__1yhcak80 style_prominence_strong__1yhcak85 style_sentiment_primary__1yhcak8c style_variant_caption__1yhcak8p style_undefined_compound_1__1yhcak81b style_undefined_compound_41__1yhcak82f"
      >
        A
      </span>
    </kbd>
  </div>
</DocumentFragment>
`;
